# embed-all

./: .codemap.yml  .coveragerc  .gitignore  README.md  Taskfile.yml  pyproject.toml  pytest.ini
.cursor/rules/: best-practices.mdc  docs.mdc
.github/: CONTRIBUTING.md
docs/: implementation.md  ollama.md  voyage_api_referrence.md
src/embed_all/: __init__.py
src/embed_all/client/: __init__.py  async_client.py  base_client.py  sync_client.py
src/embed_all/client/providers/: __init__.py  base.py  cohere.py  ollama.py  open_ai.py  voyage.py
src/embed_all/models/: __init__.py  base.py  errors.py
src/embed_all/models/requests/: __init__.py  base.py  batch.py  multimodal.py  text.py
src/embed_all/models/responses/: __init__.py  base.py  batch.py  multimodal.py  text.py
src/embed_all/models/responses/providers/: __init__.py  cohere.py  ollama.py  open_ai.py  voyage.py
tests/: __init__.py
tests/test_client/: __init__.py  test_async_client.py  test_sync_client.py
tests/test_client/test_providers/: __init__.py  test_cohere.py  test_init.py  test_ollama.py  test_open_ai.py  test_voyage.py
tests/test_models/: __init__.py  test_request_models.py  test_response_models.py
